--- a/css/custom.css
+++ b/css/custom.css
@@ -25,11 +25,42 @@
   width:100%;
 }
 
-.ccbutton {
+.post-button {
   border: 2px solid black;
   border-radius: 15px;
   font-size: 40px;
   padding: 20px;
   font-weight: bold;
+  color: white;
+  background: #12CA7D;
 }
 
+.edit-button {
+  border: 2px solid black;
+  border-radius: 15px;
+  font-size: 40px;
+  padding: 20px;
+  font-weight: bold;
+  color: white;
+  background: #64C9FC;
+}
+
+.anno-header {
+  /*border: 2px solid black;*/
+  margin: 30px 0 0 0;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: left;
+}
+
+.anno-insert {
+  border: 2px solid black;
+  padding: 0;
+}
+
+.anno-note {
+  /*border: 2px solid black;*/
+  margin: 15px 0 0 0;
+  font-size: 14px;
+  padding: 0;
+}
